# World

World/: CMakeLists.txt
World/src/game/: GameManager.cpp  GameManager.h
World/src/item/: ItemTemplate.cpp
World/src/role/enemy/: Enemy.cpp  EnemyManager.cpp
World/src/system/backpack/: Inventory.h
World/src/system/fight/: BattleSystem.h
World/src/system/mission/: TaskManager.cpp  TaskManager.h
again/change_result/: temp_check.txt
again/change_result/World/: .gitattributes  .gitignore  CMakeLists.txt
again/change_result/World/All_resources/story/: background.docx  story.docx
again/change_result/World/src/game/: GameManager.cpp  GameManager.h
again/change_result/World/src/item/: ItemTemplate.h
again/change_result/World/src/role/character/: MainCharacter.cpp  MainCharacter.h
again/change_result/World/src/role/combatant/: Combatant.cpp  Combatant.h
again/change_result/World/src/role/enemy/: Enemy.h  EnemyManager.h
again/change_result/World/src/system/backpack/: Inventory.cpp
again/change_result/World/src/system/fight/: BattleSystem.cpp
again/change_result/World/src/ui/: BagDetailDialog.cpp  BagDetailDialog.h  BagScreen.cpp  BagScreen.h  BattleScreen.cpp  BattleScreen.h  CZoneBattleScreen.cpp  CZoneBattleScreen.h  CharFileScreen.cpp  CharFileScreen.h  FighterDetailScreen.cpp  FriendsScreen.cpp  FriendsScreen.h  MainScreen.cpp  MainScreen.h  MapScreen.cpp  MapScreen.h  MiscScreens.cpp  RecruitScreen.cpp  RecruitScreen.h  SplashScreen.cpp  SplashScreen.cpp.bak  SplashScreen.h  StoreScreen.cpp  StoreScreen.h  StoryScreen.cpp  StoryScreen.h  TaskListScreen.cpp  TaskListScreen.h  UIHelper.cpp  UIHelper.h  UIResource.cpp  UIResource.h  UIShared.h
(+6 files in other folders)
